# lektor-minify-html

./: .pre-commit-config.yaml  LICENSE  README.md  lektor_minify_html.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yaml
tests/: conftest.py  test_lektor_minify_html.py
tests/example-project/: example-project.lektorproject
tests/example-project/content/: contents.lr
tests/example-project/templates/: layout.html
